--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -70,7 +70,7 @@
 }
 &__locations-icoL,
 &__locations-icoR {
-margin-left: 10px;
+margin-left: 6px;
 display: inline-flex;
 align-items: center;
 }
@@ -86,6 +86,7 @@ align-items: center;
     color: var(--white-color);
     border: none;
     border-radius: 22px;
+    line-height: 20px;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -173,6 +174,10 @@ align-items: center;
       font-size: 16px;
       margin-bottom: 32px;
     }
+    &__locations-icoL,
+&__locations-icoR {
+margin-left: 10px;
+}
     
     &__block {
       margin-bottom: 32px;
