--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -11,6 +11,8 @@
   transform: translateX(101vw);
   transition: transform 250ms ease-in-out;
   z-index: 5;
+  overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
 
 .mobile__menu-container.is-open {
