--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -21,22 +21,22 @@
 }
 
 .modal {
-  width: 370px;
-  height: 500px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
+  width: 90%; /* Adjust to fit smaller screens */
+  max-width: 450px; /* Maximum width for larger screens */
+  height: 90%; /* Adjust height to fit smaller screens */
+  max-height: 500px; /* Maximum height for larger screens */
   overflow-y: auto; /* Enable vertical scrolling */
   -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on iOS */
+  position: relative;
+  background-color: white;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  padding: 20px; /* Optional padding for content */
 }
 
 .modal__button--close {
   position: absolute;
+  margin: auto;
   top: 8px;
   right: 8px;
   width: 30px;
