--- a/src/partials/buy-now-modal.html
+++ b/src/partials/buy-now-modal.html
@@ -13,8 +13,7 @@
       </fieldset>
       <fieldset class="form__fieldset">
         <label for="tel" class="form__label">Phone number</label>
-        <input class="form__input"  type="tel" 
-        pattern="[0-9]{9}" type="phone_number" required/>
+        <input class="form__input" type="tel" pattern="[0-9]{9}" required/>
       </fieldset>
       <fieldset class="form__fieldset">
         <label for="e-mail" class="form__label">Email</label>
