--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -11,8 +11,7 @@
   transform: translateX(101vw);
   transition: transform 250ms ease-in-out;
   z-index: 5;
-  overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+  overflow-y: auto; 
 }
 
 .mobile__menu-container.is-open {
