--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -38,19 +38,16 @@
   right: 8px;
   width: 30px;
   height: 30px;
-  justify-content: center;
-  align-items: center;
   background-color: #D41442;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   cursor: pointer;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus,
-    &:hover {
-      background: #ba1139;
-    }
 }
+
 .modal__button--close-ico {
   display: flex;
   align-items: center;
@@ -58,7 +55,6 @@
   margin: auto;
   fill: white;
   padding: 2px;
-
 }
 
 .form {
@@ -195,6 +191,7 @@
   .modal {
     width: 450px;
     height: 480px;
+    height: 70%;
     overflow-y: auto; /* Przewijanie w osi Y */
   }
   .modal .form__title {
