--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -49,7 +49,8 @@
 }
 
 .modal__button--close-ico {
-  display: inline-flex;
+  width: 17px;
+  height: 17px;
   align-items: center;
   justify-content: center;
   margin: auto;
