--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -11,7 +11,6 @@
   transform: translateX(101vw);
   transition: transform 250ms ease-in-out;
   z-index: 5;
-  overflow-y: auto; 
 }
 
 .mobile__menu-container.is-open {
@@ -98,6 +97,8 @@ align-items: center;
     width: 254px;
     height: 1020px;
     transform: translateX(101vw);
+    height: 90%;
+    overflow-y: auto; /* Przewijanie w osi Y */
   }
 
   .mobile__menu-container.is-open {
