--- a/src/sass/_buy-now-modal.scss
+++ b/src/sass/_buy-now-modal.scss
@@ -3,12 +3,13 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0%;
+  left: 0%;
   display: flex;
+  position: fixed;
   transition: 0.5s;
   transition-timing-function: ease-out;
-  z-index: 100;
+  z-index: 1000;
   
   
 }
@@ -200,7 +201,7 @@
   }
   .modal .form__title {
     font-size: 16px;
-    padding-bottom: 5px;
+    margin-bottom: 15px;
   }
   .modal .form__fieldset {
     padding-block: 8px;
